--- a/composer.json
+++ b/composer.json
@@ -75,6 +75,7 @@
     },
     "require-dev": {
         "symfony/debug-bundle": "5.4.*",
+        "symfony/maker-bundle": "^1.50",
         "symfony/stopwatch": "5.4.*",
         "symfony/web-profiler-bundle": "5.4.*"
     }
