--- a/composer.json
+++ b/composer.json
@@ -74,6 +74,7 @@
         }
     },
     "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^3.6",
         "symfony/debug-bundle": "5.4.*",
         "symfony/maker-bundle": "^1.50",
         "symfony/stopwatch": "5.4.*",
