--- a/composer.json
+++ b/composer.json
@@ -78,6 +78,7 @@
         "symfony/debug-bundle": "5.4.*",
         "symfony/maker-bundle": "^1.50",
         "symfony/stopwatch": "5.4.*",
-        "symfony/web-profiler-bundle": "5.4.*"
+        "symfony/web-profiler-bundle": "5.4.*",
+        "zenstruck/foundry": "^1.38"
     }
 }
