Autenticación básica de los árbitros usando http_basic

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -2,17 +2,28 @@ security:
     enable_authenticator_manager: true
     # https://symfony.com/doc/current/security.html#registering-the-user-hashing-passwords
     password_hashers:
-        Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
+        Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'plaintext'
+        #Symfony\Component\Security\Core\User\InMemoryUser: 'plaintext'
     # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
     providers:
-        users_in_memory: { memory: null }
+        #users_in_memory:
+        #    memory:
+        #        users:
+        #            chuck: { password: 'norris', roles: ['ROLE_USER', 'ROLE_ADMIN'] }
+        #            filemon: { password: 'pi', roles: ['ROLE_USER'] }
+        proveedor_arbitros:
+            entity:
+                class: App\Entity\Arbitro
+                property: numColegiado
+
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
             lazy: true
-            provider: users_in_memory
+            http_basic: ~
+            provider: proveedor_arbitros
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
