--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -22,8 +22,14 @@ security:
             security: false
         main:
             lazy: true
-            http_basic: ~
+            # http_basic: ~
             provider: proveedor_arbitros
+            form_login:
+                login_path: app_login
+                check_path: app_login
+            logout:
+                path: app_logout
+                target: arbitro_listar
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
