--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,35 +1,29 @@
 security:
     enable_authenticator_manager: true
-    # https://symfony.com/doc/current/security.html#registering-the-user-hashing-passwords
     password_hashers:
-        Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
-        #Symfony\Component\Security\Core\User\InMemoryUser: 'plaintext'
-    # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
+        Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'plaintext'
     providers:
-        #users_in_memory:
-        #    memory:
-        #        users:
-        #            chuck: { password: 'norris', roles: ['ROLE_USER', 'ROLE_ADMIN'] }
-        #            filemon: { password: 'pi', roles: ['ROLE_USER'] }
         proveedor_arbitros:
             entity:
                 class: App\Entity\Arbitro
                 property: numColegiado
-
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
+        api:
+            pattern: ^/api/
+            stateless: true
+            provider: proveedor_arbitros
+            jwt: ~
         main:
             lazy: true
-            # http_basic: ~
-            provider: proveedor_arbitros
-            form_login:
-                login_path: app_login
-                check_path: app_login
-            logout:
-                path: app_logout
-                target: arbitro_listar
+            json_login:
+                check_path: api_login
+                username_path: numColegiado
+                password_path: password
+                success_handler: lexik_jwt_authentication.handler.authentication_success
+                failure_handler: lexik_jwt_authentication.handler.authentication_failure
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
